--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -8,10 +8,46 @@ seaLevel: 63
 
 biomes:
   id: "nukkitx:filtered"
+  fallback: "ocean"
   root:
-    id: "nukkitx:island"
-    biome: "minecraft:ocean"
-  fallback: "minecraft:plains"
+    id: "nukkitx:zoom"
+    times: 2
+    next:
+      id: "nukkitx:smooth"
+      next:
+        id: "nukkitx:zoom"
+        times: 2
+        next:
+          id: "nukkitx:zoom"
+          times: 1
+          fuzzy: true
+          next:
+            id: "nukkitx:island"
+            ocean: "ocean"
+            islandBiomes:
+              - "plains"
+            chance: 32
+            next:
+              id: "nukkitx:zoom"
+              times: 1
+              next:
+                id: "nukkitx:substitute_random"
+                biomes:
+                  plains:
+                    - "plains"
+                    - "sunflower_plains"
+                    - "forest"
+                next:
+                  id: "nukkitx:zoom"
+                  times: 3
+                  fuzzy: true
+                  next:
+                    id: "nukkitx:random"
+                    biomes:
+                      - "plains"
+                      - "plains"
+                      - "plains"
+                      - "ocean"
 
 #  id: "nukkitx:constant"
 #  seed: "biome"
@@ -71,10 +107,3 @@ decorators:
 
 populators:
   - id: "nukkitx:biome"
-  - id: "nukkitx:normal_tree"
-    count: 2-8
-    on: "grass"
-    replaceOn: "dirt"
-    height: 4-7
-    trunk: "log"
-    leaf: "leaves"
