--- a/server/src/main/resources/generator/test/nukkitx/test.yml
+++ b/server/src/main/resources/generator/test/nukkitx/test.yml
@@ -1,19 +1,42 @@
 id: "nukkitx:zoom"
-times: 3
+times: 2
 next:
-  id: "nukkitx:substitute_random"
-  biomes:
-    plains:
-      - "plains"
-      - "sunflower_plains"
-      - "forest"
+  id: "nukkitx:border_river"
+  ocean: "ocean"
+  river: "river"
   next:
-    id: "nukkitx:zoom"
-    times: 2
-    fuzzy: true
+    id: "nukkitx:smooth"
     next:
-      id: "nukkitx:random"
-      biomes:
-        - "plains"
-        - "ocean"
-        - "extreme_hills"
+      id: "nukkitx:zoom"
+      times: 2
+      next:
+        id: "nukkitx:zoom"
+        times: 1
+        fuzzy: true
+        next:
+          id: "nukkitx:island"
+          ocean: "ocean"
+          islandBiomes:
+            - "plains"
+          chance: 32
+          next:
+            id: "nukkitx:zoom"
+            times: 1
+            next:
+              id: "nukkitx:substitute_random"
+              biomes:
+                plains:
+                  - "plains"
+                  - "sunflower_plains"
+                  - "forest"
+              next:
+                id: "nukkitx:zoom"
+                times: 3
+                fuzzy: true
+                next:
+                  id: "nukkitx:random"
+                  biomes:
+                    - "plains"
+                    - "plains"
+                    - "plains"
+                    - "ocean"
