--- a/server/src/main/resources/generator/test/nukkitx/test.yml
+++ b/server/src/main/resources/generator/test/nukkitx/test.yml
@@ -1,42 +1,43 @@
 id: "nukkitx:zoom"
 times: 2
 next:
-  id: "nukkitx:border_river"
-  ocean: "ocean"
-  river: "river"
+  id: "nukkitx:smooth"
   next:
-    id: "nukkitx:smooth"
+    id: "nukkitx:zoom"
+    times: 1
     next:
-      id: "nukkitx:zoom"
-      times: 2
+      id: "nukkitx:shore"
+      ocean: "ocean"
+      beach: "beach"
       next:
         id: "nukkitx:zoom"
         times: 1
-        fuzzy: true
         next:
-          id: "nukkitx:island"
-          ocean: "ocean"
-          islandBiomes:
-            - "plains"
-          chance: 32
+          id: "nukkitx:zoom"
+          times: 1
+          fuzzy: true
           next:
-            id: "nukkitx:zoom"
-            times: 1
+            id: "nukkitx:island"
+            ocean: "ocean"
+            islandBiomes:
+              - "plains"
+            chance: 32
             next:
-              id: "nukkitx:substitute_random"
-              biomes:
-                plains:
-                  - "plains"
-                  - "sunflower_plains"
-                  - "forest"
+              id: "nukkitx:zoom"
+              times: 1
               next:
-                id: "nukkitx:zoom"
-                times: 3
-                fuzzy: true
+                id: "nukkitx:substitute_random"
+                biomes:
+                  plains:
+                    - "plains"
+                    - "sunflower_plains"
+                    - "forest"
                 next:
-                  id: "nukkitx:random"
-                  biomes:
-                    - "plains"
-                    - "plains"
-                    - "plains"
-                    - "ocean"
+                  id: "nukkitx:zoom"
+                  times: 3
+                  fuzzy: true
+                  next:
+                    id: "nukkitx:random"
+                    biomes:
+                      - "plains"
+                      - "ocean"
