fix biome selection artifacts when sampling at low resolutions

--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -52,6 +52,7 @@ biomes:
                         id: "nukkitx:random"
                         biomes:
                           - "plains"
+                          - "plains"
                           - "ocean"
 
 #  id: "nukkitx:constant"
