--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -11,7 +11,7 @@ biomes:
   fallback: "ocean"
   root:
     id: "nukkitx:zoom"
-    times: 3
+    times: 2
     next:
       id: "nukkitx:smooth"
       next:
@@ -46,11 +46,12 @@ biomes:
                         - "forest"
                     next:
                       id: "nukkitx:zoom"
-                      times: 2
+                      times: 3
                       fuzzy: true
                       next:
                         id: "nukkitx:random"
                         biomes:
+                          - "plains"
                           - "plains"
                           - "ocean"
 
