okay now i think i'm on the right track to fixing biome elevations

--- a/server/src/main/resources/generator/biome/minecraft/beach.yml
+++ b/server/src/main/resources/generator/biome/minecraft/beach.yml
@@ -1,7 +1,8 @@
 dict: "nukkitx:vanilla"
 
-baseHeight: 64.0
-heightVariation: 1.6
+elevationVanilla:
+  height: 0.0
+  variation: 0.025
 
 temperature: 0.8
 rainfall: 0.4
