--- a/server/src/main/resources/generator/biome/minecraft/river.yml
+++ b/server/src/main/resources/generator/biome/minecraft/river.yml
@@ -1,7 +1,8 @@
 dict: "nukkitx:vanilla"
 
-baseHeight: 55.0
-heightVariation: 0.01
+elevationVanilla:
+  height: -0.5
+  variation: 0.0
 
 temperature: 0.5
 rainfall: 0.5
