--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills.yml
@@ -1,7 +1,8 @@
 dict: "nukkitx:vanilla"
 
-baseHeight: 128.0
-heightVariation: 64.0
+elevationVanilla:
+  height: 1.0
+  variation: 0.5
 
 temperature: 0.2
 rainfall: 0.3
