--- a/server/src/main/resources/log4j2.component.properties
+++ b/server/src/main/resources/log4j2.component.properties
@@ -1,4 +1,5 @@
 ## log4j2.messageFactory=cn.nukkit.locale.NukkitMessageFactory
+log4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector
 log4j2.enableThreadlocals=true
 log4j2.enableDirectEncoders=true
 log4j2.garbagefreeThreadContextMap=true
