--- a/server/pom.xml
+++ b/server/pom.xml
@@ -150,6 +150,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.0-alpha1</version>
         </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
+        </dependency>
 
         <!-- Jackson -->
         <dependency>
