--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills.yml
@@ -7,6 +7,19 @@ elevationVanilla:
 temperature: 0.2
 rainfall: 0.3
 
+decorators:
+  - id: "nukkitx:noise"
+    selector:
+      id: "nukkitx:simplex"
+      scale: 0.0045
+      octaves: 4
+    min: -0.06666666666
+    in:
+      id: "nukkitx:surface"
+      ground: "stone"
+      top: "grass"
+      fill: "dirt"
+
 populators:
     # Emerald
   - id: "nukkitx:ore"
@@ -26,7 +39,7 @@ populators:
 
     # Trees
   - id: "nukkitx:tree"
-    chance: 0.00048828125 # about 1 per 8 chunks
+    chance: 0.000390625 # about 1 per 10 chunks
     on: "grass"
     types:
       - "oak"
