--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills_plus_trees.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills_plus_trees.yml
@@ -1,2 +1,19 @@
 dict: "nukkitx:vanilla"
 parent: "minecraft:extreme_hills"
+
+decorators:
+  - id: "nukkitx:surface"
+    ground: "stone"
+    top: "grass"
+    fill: "dirt"
+
+populators:
+  - id: "nukkitx:next"
+
+    # More trees
+  - id: "nukkitx:tree"
+    chance: 0.01171875 # about 3 per chunk
+    on: "grass"
+    types:
+      - "oak"
+      - "spruce"
