--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills.yml
@@ -9,6 +9,7 @@ rainfall: 0.3
 
 decorators:
   - id: "nukkitx:noise"
+    seed: "extreme_hills"
     selector:
       id: "nukkitx:simplex"
       scale: 0.0045
