--- a/server/src/main/resources/generator/preset/nukkitx/overworld.yml
+++ b/server/src/main/resources/generator/preset/nukkitx/overworld.yml
@@ -6,109 +6,9 @@ groundBlock: "stone"
 seaBlock: "water"
 seaLevel: 63
 
-biomes:
-  id: "nukkitx:constant"
-  biome: "minecraft:extreme_hills_plus_trees"
-#  id: "nukkitx:filtered"
-#  fallback: "ocean"
-#  root:
-#    id: "nukkitx:zoom"
-#    times: 2
-#    next:
-#      id: "nukkitx:smooth"
-#      next:
-#        id: "nukkitx:zoom"
-#        times: 1
-#        next:
-#          id: "nukkitx:shore"
-#          ocean: "ocean"
-#          beach: "beach"
-#          next:
-#            id: "nukkitx:zoom"
-#            times: 1
-#            next:
-#              id: "nukkitx:zoom"
-#              times: 1
-#              fuzzy: true
-#              next:
-#                id: "nukkitx:island"
-#                ocean: "ocean"
-#                islandBiomes:
-#                  - "plains"
-#                chance: 32
-#                next:
-#                  id: "nukkitx:zoom"
-#                  times: 1
-#                  next:
-#                    id: "nukkitx:substitute_random"
-#                    biomes:
-#                      plains:
-#                        - "plains"
-#                        - "sunflower_plains"
-#                        - "extreme_hills"
-#                        - "forest"
-#                    next:
-#                      id: "nukkitx:zoom"
-#                      times: 3
-#                      fuzzy: true
-#                      next:
-#                        id: "nukkitx:random"
-#                        biomes:
-#                          - "plains"
-#                          - "plains"
-#                          - "ocean"
+biomes: "nukkitx:overworld"
 
-#  id: "nukkitx:constant"
-#  seed: "biome"
-#  biome: "minecraft:plains"
-
-density:
-  id: "nukkitx:vanilla"
-  seed: "noise"
-  selectorNoise:
-    id: "nukkitx:simplex"
-    scale:
-      x: 0.016709277406334877
-      y: 0.008354638703167439
-      z: 0.016709277406334877
-    octaves: 8
-    factor: 12.75
-    offset: 0.5
-  lowNoise:
-    id: "nukkitx:simplex"
-    scale:
-      x: 0.005221649073064327
-      y: 0.0026108245365321636
-      z: 0.005221649073064327
-    octaves: 16
-    factor: 1.0
-    offset: 0.0
-  highNoise:
-    id: "nukkitx:simplex"
-    scale:
-      x: 0.005221649073064327
-      y: 0.0026108245365321636
-      z: 0.005221649073064327
-    octaves: 16
-    factor: 1.0
-    offset: 0.0
-  depthNoise:
-    id: "nukkitx:simplex"
-    scale:
-      x: 0.005221649073064327
-      y: 0.0 # not used
-      z: 0.005221649073064327
-    octaves: 16
-    factor: 1.0240000486373901
-    offset: 0.0
-  terrainSmoothing:
-    radius: 2
-    scale: 4
-  specialHeightVariation: 0.25
-  heightFactor: 64.0
-  heightOffset: 64.0
-  heightVariationFactor: 32.0 # TODO: this should be 64, which means I need to figure out how to scale biome variation correctly
-  heightVariationOffset: 0.0
+density: "nukkitx:default"
 
 decorators:
   - id: "nukkitx:next"
